--- a/grub.cfg
+++ b/grub.cfg
@@ -1,8 +1,7 @@
 set timeout=0
 set default=0
 
-menuentry "Camelot-0.1.0"
-{
+menuentry 'Camelot-0.1.0' {
 	multiboot /boot/camelot-0.1.0.bin
 	boot
 }
